fix the display to fit on mobile
hopefully

--- a/index-style.css
+++ b/index-style.css
@@ -71,35 +71,26 @@ html{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
     padding: 25px;
-    margin:auto;
-    width: 40%;
+    display: flex;
+    justify-content:space-around;
 }
 
 #second > div:nth-child(2){
     display: flex;
-    justify-content: space-between;
-    padding-left: 300px;
-    padding-right: 300px;
-    padding-bottom: 75px;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
-#second > div:nth-child(2) > div:nth-child(1) > div, 
-#second > div:nth-child(2) > div:nth-child(2) > div,
-#second > div:nth-child(2) > div:nth-child(3) > div,
-#second > div:nth-child(2) > div:nth-child(4) > div{
-    font-size: 14px;
-    color: #1F2937;
-    max-width: 150px;
-}
-
-#second > div:nth-child(2) > div:nth-child(1) > div:nth-child(1),
-#second > div:nth-child(2) > div:nth-child(2) > div:nth-child(1),
-#second > div:nth-child(2) > div:nth-child(3) > div:nth-child(1),
-#second > div:nth-child(2) > div:nth-child(4) > div:nth-child(1){
-    width: 150px;
-    height: 150px;
+.smallImages{
+    width: 200px;
+    height: 200px;
     border:3px solid #3882F6;
     border-radius: 15px 15px 15px 15px;
+}
+
+.smallImageText{
+    max-width: 200px;
+    font-size: 14px;
 }
 
 #third{
@@ -119,8 +110,10 @@ html{
     font-size: 16px;
     font-weight: bold;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin-left: 900px;
-    margin-right: 200px;
+    display: flex;
+    justify-content: flex-end;
+    flex-wrap: nowrap;
+    padding-right: 100px;
     padding-bottom: 75px;
 }
 
